--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Hello, My Name Is Zac Guryan, I'm A Student In Brooklyn, Here's What I look Like:</h1>
   <img src="Photos/Photo on 2-12-26 at 2.35 PM.jpg" alt="ph0t0 0f m3 height="300" width="450"/><h4>Web Design 2026</h4>
   <h4>This is my first website:</h4>
-  <a href="page.html">ComeInside</a>
+  <a href="First/page.html">ComeInside</a>
 <h5>Other Pages:</h5>
 </body>
 </html>
